# fclib

./: CMakeLists.txt  README.md
fclib/: CMakeLists.txt  codefind.cpp  eatwhite.cpp  fatoi.cpp  fatoin.cpp  fatol.cpp  fatoln.cpp  fatox.cpp  fatoxn.cpp  fisdigit.cpp  fitoa.cpp  fmemcmp.cpp  fmemcpy.cpp  fmemmem.cpp  fmemmove.cpp  fmemset.cpp  fqsort.cpp  fsprintf.cpp  fstrcat.cpp  fstrchr.cpp  fstrcmp.cpp  fstrcpy.cpp  fstricmp.cpp  fstrlen.cpp  fstrlwr.cpp  fstrncmp.cpp  fstrncpy.cpp  fstrnicmp.cpp  fstrpbrk.cpp  fstrrchr.cpp  fstrset.cpp  fstrspn.cpp  fstrstr.cpp  fstrtok.cpp  fstrtol.cpp  fstrtoul.cpp  fstrupr.cpp  ftolower.cpp  ftoupper.cpp  fwcsicmp.cpp  (+11 more)
tests/: CMakeLists.txt
tests/general/: CMakeLists.txt  main.cpp
