enable_language(ASM)
project(fclib C CXX ASM_MASM)

string(TOLOWER "${CMAKE_C_COMPILER_ARCHITECTURE_ID}" TARGET_ARCHITECTURE)

if (TARGET_ARCHITECTURE STREQUAL "x86")
  file(GLOB_RECURSE ASOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.asm")
endif()

file(GLOB_RECURSE SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cpp")
file(GLOB_RECURSE HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")

if(CMAKE_CXX_FLAGS_DEBUG MATCHES "/RTC1")
  string(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
endif()

if(CMAKE_CXX_FLAGS MATCHES "/EHsc")
  string(REPLACE "/EHsc" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
endif() 

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GS-")

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${ASOURCES} ${HEADERS}) 

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
